--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
-    "swiper": "^11.1.9"
+    "swiper": "^11.1.9",
+    "zustand": "^4.5.5"
   },
   "devDependencies": {
     "@types/node": "^20",
