--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
     "react-icons": "^5.2.1",
+    "react-toastify": "^10.0.5",
     "swiper": "^11.1.9",
     "zod": "^3.23.8",
     "zustand": "^4.5.5"
